<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_thailand">Bangkok is the capital of Thailand.</string>
    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button"><![CDATA[Next]]></string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer">Show Answer</string>
    <string name="are_you_sure">Are you sure you want to do this?</string>
</resources>
